# tfs

./: Cargo.toml  DESIGN.md  HACKING.md  README.md  TODO.md
.github/workflows/: ci.yml
src/: cli.rs  engine.rs  events.rs  exit_codes.rs  fsops.rs  journal.rs  lib.rs  main.rs  model.rs  policy.rs  reporter.rs  resolve.rs  transaction.rs  validate.rs
tests/: basic.rs  integration.rs
