[package]
name = "tfs"
version = "0.1.0"
edition = "2024"
description = "Transactional filesystem operation engine"
license = "MIT"
readme = "README.md"
repository = "https://github.com/example/tfs"
keywords = ["filesystem", "transaction", "undo", "manifest", "agent"]
categories = ["filesystem", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["preserve_order"] }
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.24"
fs_extra = "1.3"
walkdir = "2.5"
path-absolutize = "3.1"
filetime = "0.2"
uuid = { version = "1.19", features = ["v4", "serde"] }
humantime = "2.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
bytesize = "2.3"
hex = "0.4"
indicatif = { version = "0.18", optional = true }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
tempfile = "3.24"
assert_cmd = "2.1"
predicates = "3.1"
serde_json = "1.0"
pretty_assertions = "1.4"

[features]
default = []
cli = ["indicatif"]
parallel = ["rayon"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "tfs"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
